# Shibitov

./: .gitignore
RIPS/lab 10/: README.md  execution_result.md
RIPS/lab 10/src/: task1_spmd_pi.cpp  task2_parallel_for_pi.cpp  task3_divide_and_conquer_pi.cpp
RIPS/lab 11/: README.md  execution_result.md
RIPS/lab 11/src/: task1_parallel_accumulate.cpp  task2_parallel_integral.cpp
RIPS/lab 12/: README.md  execution_result.md
RIPS/lab 12/src/: task1_flag_thread.cpp  task1_jthread.cpp  task2_parallel_algorithms.cpp  task3_mutex.cpp  task3_syncstream.cpp
RIPS/lab 13/: README.md  execution_result.md
RIPS/lab 13/src/: task1_accumulate_style_max.cpp  task2_divide_and_conquer_max.cpp  task3_policies_openmp_max.cpp
RIPS/lab 14/: README.md  detailed_conspect.md  execution_result.md  report.md
RIPS/lab 14/src/: DemoLauncher.java  KeyValueClient.java  NodeServer.java  Topology.java
RIPS/lab4/: MergeSortParallel.java  PiEstimator.java  PrimesPool.java  execution_result.md
RIPS/lab5/: GenerateInput.java  ProducerConsumerBlockingQ.java  ProducerConsumerRace.java  ProducerConsumerSync.java  ReverseWordPC.java  ReverseWordParallel.java  ReverseWordSequential.java  execution_result.md
RIPS/lab6/: ParkingLotConcurrent.java  ParkingLotCondition.java  ParkingLotSemaphore.java  ParkingLotSync.java  execution_result.md
RIPS/lab8/: Lab8Benchmark.java  execution_result.md
RIPS/lab9/: execution_result.md  task1_parallel_region.cpp  task2_parallel_for.cpp  task3_schedule.cpp  task4_mutual_exclusion.cpp  task5_data_sharing.cpp
АИ/lab2/: lab2.ipynb  lab2_report.md
АИ/lab3/: lab3.ipynb  lab3_report.md
ПМИВС/Lab7/: lab7_report.md
ПМИВС/Lab7/Task3ProfileApp/: CMakeLists.txt  Main.qml  README.md
ПМИВС/Lab7/Task4GuessNumber/: CMakeLists.txt  Main.qml  main.cpp
ПМИВС/Lab7/Task4GuessNumber/src/: GameSettings.h  LanguageManager.cpp  LanguageManager.h
ПМИВС/Lab7/Task4GuessNumber/tests/: CMakeLists.txt  tst_game.cpp
ПМИВС/Lab7/Task4GuessNumber/translations/: Task4GuessNumber_be.ts  Task4GuessNumber_en.ts
ПМИВС/Lab7/Task5MSSQLNotes/: CMakeLists.txt  README.md  main.cpp
ПМИВС/Lab7/Task5MSSQLNotes/src/: DatabaseManager.cpp  NotesModel.h
ПМИВС/Lab7/Task5MSSQLNotes/tests/: CMakeLists.txt
ПМИВС/Lab7/TestAndroidApp_2/: CMakeLists.txt  main.cpp
ПМИВС/Lab8/: .gitignore  Lab_9-uslovie.md  README.md  lab8_report.md
ПМИВС/Lab8/Task2TestApp/: CMakeLists.txt  main.cpp
ПМИВС/Lab8/Task3ProfileApp/: main.cpp
ПМИВС/Lab8/Task4GuessNumber/: README.md
ПМИВС/Lab8/Task4GuessNumber/src/: GameSettings.cpp  GameViewModel.cpp  GameViewModel.h
ПМИВС/Lab8/Task4GuessNumber/translations/: Task4GuessNumber_ru.ts
ПМИВС/Lab8/Task5MSSQLNotes/: Main.qml
ПМИВС/Lab8/Task5MSSQLNotes/src/: DatabaseManager.h  NotesModel.cpp
ПМИВС/Lab8/Task5MSSQLNotes/tests/: tst_database.cpp
ПМИВС/Lab8/TestAndroidApp_2/: Main.qml
ПМИВС/Lab8/docs/: lab8_report.md  theory_answers.md
ПМИВС/Lab8/src/bus_tickets/: README.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
ПМИВС/Lab8/src/guess_number/: README.md  pubspec.yaml
ПМИВС/lab4/: lab4_report.md
ПМИВС/lab4/Lab_4_Calculator_Shibitov_Nikolay/: settings.gradle
ПМИВС/lab4/Lab_4_GuessNumber_Shibitov_Nikolay/: settings.gradle
ПМИВС/lab4/scripts/: task09_adb_install_launch.sh  task10_adb_logcat.sh  task11_monkey.sh  task12_adb_regression.sh  task13_pseudolocales.sh  task14_screenshot_compare.sh  task16_full_cycle.sh
ПМИВС/lab5/: lab5_report.md
ПМИВС/lab5/Lab_5_Task_1_Shibitov_Nikolay/: settings.gradle
ПМИВС/lab5/Lab_5_Task_2_Shibitov_Nikolay/: settings.gradle
ПМИВС/lab5/Lab_5_Task_3_Shibitov_Nikolay/: settings.gradle
ПМИВС/lab5/Lab_5_Task_4_Shibitov_Nikolay/: settings.gradle
ПМИВС/lab5/Lab_5_Task_5_Shibitov_Nikolay/: settings.gradle
ПМИВС/lab5/Lab_5_Task_6_Shibitov_Nikolay/: settings.gradle
ПМИВС/lab5/Lab_5_Task_7_Shibitov_Nikolay/: settings.gradle
ПМИВС/lab5/Lab_5_Task_8_Shibitov_Nikolay/: settings.gradle
ПМИВС/lab5/Lab_5_Task_9_Shibitov_Nikolay/: settings.gradle
ПМИВС/lab6/: lab6_report.md
ПМИВС/lab6/Lab6_Task71_SharedPreferences_Shibitov/: settings.gradle
ПМИВС/lab6/Lab6_Task72_DataStore_Shibitov/: settings.gradle
ПМИВС/lab6/Lab6_Task74_SQLite_Shibitov/: settings.gradle
ПМИВС/lab6/Lab6_Task75_SQLite_Upgrade_Shibitov/: .gitignore  settings.gradle
ПМИВС/lab6/Lab6_Task77_Room_Shibitov/: settings.gradle
ТиОКРС/lab3/: lab3_report.md
ТиОКРС/lab4/: lab4_report.md
ТиОКРС/lab5/: Dockerfile  lab5_report.md  pom.xml
ТиОКРС/lab6/: lab6_report.md
ТиОКРС/lab7/: lab7_report.md
ТиОКРС/lab8/: lab8_report.md
(+252 files in other folders)
